--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@ A picscha is in se sleidsho tu :) </p>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block" src="/Users/kiraaugustiani/Documents/coding/html_mail_neu/fotos/aussicht.jpeg" alt="First slide">
+      <img class="d-block" src="fotos/aussicht.jpeg" alt="First slide">
       <div class="carousel-caption">
           <h5>Neis vju</h5>
           <p>cappshad on a heik on se höhe of Östersund.</p>
         </div>
     </div>
     <div class="carousel-item">
-  <img class="d-block" src="/Users/kiraaugustiani/Documents/coding/html_mail_neu/fotos/tanke.jpeg" alt="Second slide">
+  <img class="d-block" src="fotos/tanke.jpeg" alt="Second slide">
   <div class="carousel-caption">
       <h5>Not so neis vju</h5>
       <p>se tanken in se sweden was a not so erfreulich heppining. 1€ eqauls 10 swedish kronsen.</p>
     </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block" src="/Users/kiraaugustiani/Documents/coding/html_mail_neu/fotos/fiete_auf_stein.jpeg" alt="Third slide">
+      <img class="d-block" src="fotos/fiete_auf_stein.jpeg" alt="Third slide">
       <div class="carousel-caption ">
           <h5>se fiete on a rock</h5>
           <p>Dis was cepshad at a leyk in se rili clos nähe of 11km of estocolmo.</p>
